Changed google analitics

--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,18 @@
 <html>
 
 <head>
-	<title>Blockchain Transaction Visualizer - TxStreet.com</title>
-	<meta property="og:title" content="Blockchain Transaction Visualizer - TxStreet.com" />
+	<title>Blockchain Transaction Visualizer - TxStreets.com</title>
+	<meta property="og:title" content="Blockchain Transaction Visualizer - TxStreets.com" />
 	<meta charset="utf-8" />
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:site" content="@txstreetCom" />
 	<meta name="twitter:creator" content="@txstreetCom" />
-	<meta name="twitter:title" content="Blockchain Transaction Visualizer - TxStreet.com" />
+	<meta name="twitter:title" content="Blockchain Transaction Visualizer - TxStreets.com" />
 	<meta name="twitter:description"
 		content="Cryptocurrency (Bitcoin, Ethereum etc) blockchain live transaction visualizer. Every tx is a person, and they fill up buses which represent blocks." />
-	<meta name="twitter:image" content="https://txstreet.com/static/img/icons/og.png?v=<%= VUE_APP_VERSION %>" />
-	<meta name="og:image" content="https://txstreet.com/static/img/icons/og.png?v=<%= VUE_APP_VERSION %>" />
-	<meta property="og:url" content="https://txstreet.com" />
+	<meta name="twitter:image" content="https://txstreets.com/static/img/icons/og.png?v=<%= VUE_APP_VERSION %>" />
+	<meta name="og:image" content="https://txstreets.com/static/img/icons/og.png?v=<%= VUE_APP_VERSION %>" />
+	<meta property="og:url" content="https://txstreets.com" />
 	<meta property="og:description"
 		content="Cryptocurrency (Bitcoin, Ethereum etc) blockchain live transaction visualizer. Every tx is a person, and they fill up buses which represent blocks." />
 	<meta name="description"
@@ -43,13 +43,13 @@
 	<link href="/static/img/banners/xmr.jpg?v=<%= VUE_APP_VERSION %>" rel="prefetch" />
 	<link href="/static/img/banners/ltc.jpg?v=<%= VUE_APP_VERSION %>" rel="prefetch" />
 	<!-- <link href="https://player.vimeo.com/progressive_redirect/playback/696973845/rendition/720p?loc=external&signature=c8e431b2b1c554d97a4b2d1fa7ad73cf288cceb97c98a1bc88d54aaf6213d89d" rel="prefetch"> -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-GG42KW3VCP"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-LL3GQMXNXY"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
 		gtag('js', new Date());
 
-		gtag('config', 'G-GG42KW3VCP');
+		gtag('config', 'G-LL3GQMXNXY');
 	</script>
 </head>
 
