Changed landing page launcher

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,8 @@
 	<link href="/static/img/banners/eth.jpg?v=<%= VUE_APP_VERSION %>" rel="preload" />
 	<link href="/static/img/banners/xmr.jpg?v=<%= VUE_APP_VERSION %>" rel="prefetch" />
 	<link href="/static/img/banners/ltc.jpg?v=<%= VUE_APP_VERSION %>" rel="prefetch" />
+	<link href="kencss.css" rel="stylesheet" />
+	<link href="particles.css" rel="stylesheet" />
 	<!-- <link href="https://player.vimeo.com/progressive_redirect/playback/696973845/rendition/720p?loc=external&signature=c8e431b2b1c554d97a4b2d1fa7ad73cf288cceb97c98a1bc88d54aaf6213d89d" rel="prefetch"> -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-LL3GQMXNXY"></script>
 	<script>
